src/components/principal/unit/form/addResourceForm.css
.dialogContainer {
    position: fixed;
    background-color: #d2f0f9;
    z-index: 30;
    width: 100%;
    height: 100%;
    font-weight: bold;
}

.dialog {
    display: block;
}

.add-resource-dialog {
  max-width: 796px;
}

.error {
  color: #F74356;
}

.form-label {
  color: #4682b4;
  font-weight: bold;
}

.body-wrapper {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(8, [col] 12.5% ) ;
  grid-template-rows: repeat(1, [row] auto  );
}

.resource-browser-list {
  grid-column: col 1 / span 3;
  grid-row: row ;
  max-height: 500px;
  overflow-y: scroll;
}

.resource-editor {
  grid-column: col 4 / span 4 ;
  grid-row: row ;
}

.resource-browser-resource-summary {
  display: grid;
  grid-template-columns: repeat(8, [col] 12.5% ) ;
  grid-template-rows: repeat(1, [row] auto  );
}

.close-button-custom {
 width: 5%;
 justify-content: right;
 background-color: #F74356;
 color: #f2f2f2;
 padding: 5px;
 font-size: medium
}

.close-button-custom:hover:enabled{
  color: #f2f2f2;
  background-color: #930614;
}

.resource-summary-card {
  grid-column: col / span 5;
  grid-row: row ;
}

.add-resource-button-wrapper {
  grid-column: col / span 7;
  grid-row: row ;
}


.delete-resource {
  grid-column: col 7 / span 1;
  grid-row: row ;
}

.delete-resource > button {
  margin-top: 13px;
}

.errors {
}

